hphp/test/slow/error_handler/error_messages.php.expectf

Deprecated: E_USER_DEPRECATED in %s/slow/error_handler/error_messages.php on line 6

Fatal error: E_USER_ERROR in %s/slow/error_handler/error_messages.php on line 7
